# project_shmove

./: Cargo.toml  TODO.md  build.rs
src/: engine.rs  game.rs  main.rs
src/engine/: camera.rs  game_state.rs  physics.rs  render.rs  time.rs
src/engine/physics/: collision.rs  game_object.rs  input.rs
src/engine/render/: camera.rs  color.rs  light.rs  mesh.rs  resources.rs  texture.rs  ui.rs
src/engine/render/shader/: light.wgsl  shader.wgsl
src/engine/render/ui/: text.rs
src/game/: camera.rs  player.rs
