[package]
name = "project_shmove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"

[dependencies]
winit = "0.28"
wgpu = "0.18"
wgpu_glyph = "0.22.0"
cgmath = "0.18"
bytemuck = { version = "1.12", features = ["derive"] }
tobj = { version = "4.0.1", features = ["async"] }
anyhow = "1.0"
env_logger = "0.11.1"
pollster = "0.3"
instant = "0.1"
ncollide3d = "0.33.0"
